gcc/testsuite/rust/rustc/ui/inline-disallow-on-variant.rs
enum Foo {
    #[inline]
// { dg-error ".E0518." "" { target *-*-* } .-1 }
    Variant,
}

fn main() {}

